[project]
name = "dash-sample-analytics-dashboard-concept"
version = "1.0.0"
description = "Simple analytics enabled dashboard with (near) real-time information on weather, carpark and traffic conditions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.14.1",
    "dash-bootstrap-components>=1.6.0",
    "dash-leaflet>=1.0.0",
    "dash-daq>=0.5.0",
    "dash-extensions>=0.0.94",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "geopy>=2.4.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyproj>=3.6.0",
    "daal>=2021.4.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth", "callbacks", "components", "conf", "utils"]
artifacts = [
    "app.py",
    "assets/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/auth",
    "/callbacks",
    "/components",
    "/conf",
    "/utils",
    "/app.py",
    "/assets",
    "/requirements.txt",
    "/README.md",
    "/LICENSE",
]

